# MAPF-IM

./: .gitignore  A.cpp  A.h  CBS.h  CMakeLists.txt  Constraint.h  DisjointSets.cpp  EES-SIPP.h  EdgeConflict.cpp  Focal-SIPP.cpp  FullPlanner.cpp  Graph.cpp  IConflict.cpp  IConflict.h  IHighLevelPlanner.h  ILowLevelPlanner.h  IPlanner.cpp  IPlanner.h  IPolicy.h  InfromedHeuristic.cpp  LICENSE  LocalIDPlanner.h  LocalPlanner.cpp  LocalPlanner.h  Map.cpp  Map.h  Observation.cpp  Observation.h  PP.cpp  PenaltyFunction.h  Printer.h  README.md  SEES-SIPP.cpp  SEES-SIPP.h  SIPP.cpp  SafeIntervals.cpp  SafeIntervals.h  Snapshot.h  State.cpp  State.h  (+7 more)
benchmarks/Paris_1_256/: Paris_1_256.map
benchmarks/den520d/: den520d.map
benchmarks/maze-128-128-10/: maze-128-128-10.map
benchmarks/maze-32-32-2/: maze-32-32-2.map
benchmarks/ost003d/: ost003d.map
benchmarks/random-64-64-20/: random-64-64-20.map
benchmarks/room-64-64-8/scen-even/: room-64-64-8-even-26.scen
benchmarks/warehouse-20-40-10-2-2/: warehouse-20-40-10-2-2.map
exe-src/: main.cpp
lib-src/: Astar.cpp  CBS.cpp  CBS.h  Constraint.cpp  DisjointSets.h  EES-SIPP.cpp  EES-SIPP.h  EdgeConflict.h  Focal-SIPP.h  FullIDPlanner.cpp  FullIDPlanner.h  FullPlanner.cpp  FullPlanner.h  IHighLevelPlanner.h  ILowLevelPlanner.h  IPlanner.cpp  IPlanner.h  IPolicy.h  InformedHeuristic.h  LocalIDPlanner.cpp  LocalPlanner.cpp  LocalPlanner.h  Map.cpp  Map.h  PP.h  Printer.h  README.md  SIPP.h  Snapshot.cpp  Terrain.h  TimeInterval.h  Types.h  Utils.cpp  Utils.h
